...
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchFragmentRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        tools:listitem="@layout/query_item" />

    <!-- Bottom spacer for SearchFragment -->
    <Space
        android:id="@+id/bottomSpacerOfSearchFragment"
        android:layout_width="match_parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchFragmentLogo" />

    <!-- Button for navigating to the Results Fragment -->
    <Button
        android:id="@+id/shopBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom|center"
        android:text="Ready to Shop"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
